add insert pic to pdf feature & fix bugs